content/v1.4.5/en/api/core-extra/AgentSaveData.md
---
title: "AgentSaveData"
description: "Auto-generated class reference for AgentSaveData."
---
# AgentSaveData

**Namespace:** TaleWorlds.Core
**Module:** TaleWorlds.Core
**Type:** `public struct AgentSaveData`
**Base:** none
**File:** `bin/TaleWorlds.Core/TaleWorlds.Core/AgentSaveData.cs`

## Overview

`AgentSaveData` behaves like a data carrier: it packages fields so systems can exchange state in a structured form.

## Mental Model

Treat `AgentSaveData` as a Data-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Methods

### AgentSaveData
`public struct AgentSaveData(string characterStringId, MatrixFrame spawnFrame, string agentSpawnPointTags, int agentSeed)`

**Purpose:** **Purpose:** Executes the AgentSaveData logic.

```csharp
// Obtain an instance of AgentSaveData from the subsystem API first
AgentSaveData agentSaveData = ...;
var result = agentSaveData.AgentSaveData("example", spawnFrame, "example", 0);
```

### UpdateSpawnFrame
`public void UpdateSpawnFrame(MatrixFrame spawnFrame)`

**Purpose:** **Purpose:** Recalculates and stores the latest representation of spawn frame.

```csharp
// Obtain an instance of AgentSaveData from the subsystem API first
AgentSaveData agentSaveData = ...;
agentSaveData.UpdateSpawnFrame(spawnFrame);
```

### AutoGeneratedStaticCollectObjectsAgentSaveData
`public static void AutoGeneratedStaticCollectObjectsAgentSaveData(object o, List<object> collectedObjects)`

**Purpose:** **Purpose:** Executes the AutoGeneratedStaticCollectObjectsAgentSaveData logic.

```csharp
// Static call; no instance required
AgentSaveData.AutoGeneratedStaticCollectObjectsAgentSaveData(o, collectedObjects);
```

## Usage Example

```csharp
// This data object is usually returned by campaign/mission APIs
AgentSaveData entry = ...;
```

## See Also

- [Area Index](../)